--- a/app/src/main/res/layout/fragment_team_search.xml
+++ b/app/src/main/res/layout/fragment_team_search.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.gk.app.footballapp.ItemFragment"
+    android:id="@+id/search_fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".view.TeamSearchFragment"
-    tools:listitem="@layout/recycler_item_team" />
+    tools:ignore="RtlHardcoded">
+
+    <AutoCompleteTextView
+        android:id="@+id/search_fragment_edit_text"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:drawableLeft="@android:drawable/ic_search_category_default"
+        android:hint="@string/search_by_league"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_fragment_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_fragment_edit_text"
+        tools:context=".view.search.TeamSearchFragment"
+        tools:listitem="@layout/recycler_item_team" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
