--- a/app/src/main/res/layout/fragment_team_search.xml
+++ b/app/src/main/res/layout/fragment_team_search.xml
@@ -7,13 +7,22 @@
     android:layout_height="match_parent"
     tools:ignore="RtlHardcoded">
 
+
     <AutoCompleteTextView
         android:id="@+id/search_fragment_edit_text"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:drawableLeft="@android:drawable/ic_search_category_default"
         android:hint="@string/search_by_league"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/search_fragment_button"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--    android:drawableLeft="@android:drawable/ic_search_category_default"-->
+
+    <ImageButton
+        android:id="@+id/search_fragment_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@android:drawable/ic_search_category_default"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +32,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:visibility="visible"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,5 +40,27 @@
         app:layout_constraintTop_toBottomOf="@id/search_fragment_edit_text"
         tools:context=".view.search.TeamSearchFragment"
         tools:listitem="@layout/recycler_item_team" />
+
+    <ProgressBar
+        android:id="@+id/search_fragment_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/search_fragment_error_text"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_fragment_edit_text"
+        tools:text="SEARCH FAILED" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
