--- a/app/src/main/res/layout/recycler_item_team.xml
+++ b/app/src/main/res/layout/recycler_item_team.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="20dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/team_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@android:drawable/ic_menu_gallery"/>
 
 
 </LinearLayout>
