added clear text button

--- a/app/src/main/res/layout/recycler_item_team.xml
+++ b/app/src/main/res/layout/recycler_item_team.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:orientation="horizontal">
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/team_item_image"
@@ -12,4 +12,4 @@
         android:src="@android:drawable/ic_menu_gallery"/>
 
 
-</LinearLayout>
+</FrameLayout>
