--- a/app/src/main/res/layout/fragment_team_search.xml
+++ b/app/src/main/res/layout/fragment_team_search.xml
@@ -5,7 +5,8 @@
     android:id="@+id/search_fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="RtlHardcoded">
+    tools:ignore="RtlHardcoded"
+    android:background="#d3d3d3">
 
 
     <AutoCompleteTextView
@@ -17,10 +18,22 @@
         android:hint="@string/search_by_league"
         android:imeOptions="actionSearch"
         android:inputType="text"
-        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/search_fragment_clear_button"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/search_fragment_clear_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_fragment_recycler"
